<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-43dp"
        tools:layout_editor_absoluteY="251dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_bg"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="PENDAFTARAN"
                    android:textAlignment="center"
                    android:textColor="@color/judul"
                    android:textSize="35sp"
                    android:textStyle="bold|italic" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/namaDepan">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editFN"
                                android:layout_width="190dp"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:nestedScrollingEnabled="false"
                                android:textColor="@color/txt" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/namaBelakang">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editLN"
                                android:layout_width="190dp"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:nestedScrollingEnabled="false"
                                android:textColor="@color/txt" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/TL">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTL"
                                android:layout_width="155dp"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:nestedScrollingEnabled="false"
                                android:textColor="@color/txt" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tglL">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTTL"
                                android:layout_width="225dp"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:cursorVisible="false"
                                android:editable="false"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:textColor="@color/txt" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </TableRow>

                </TableLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/alamat">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fadeScrollbars="false"
                        android:inputType="textMultiLine"
                        android:nestedScrollingEnabled="false"
                        android:scrollbars="vertical" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Jenis Kelamin"
                    android:textAlignment="viewStart"
                    android:textColor="@color/judul"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/JK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radioMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:ems="12"
                                android:text="@string/Laki" />

                            <RadioButton
                                android:id="@+id/radioFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:text="@string/Wanita" />

                        </TableRow>

                    </TableLayout>

                </RadioGroup>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Agama"
                    android:textAlignment="viewStart"
                    android:textColor="@color/judul"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/Agama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/islam"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:ems="12"
                                android:text="@string/Islam" />

                            <RadioButton
                                android:id="@+id/kristen"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:text="@string/Kristen" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/kat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="12"
                                android:text="@string/kat" />

                            <RadioButton
                                android:id="@+id/hin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:text="@string/hin" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/bd"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="12"
                                android:text="@string/bd" />

                            <RadioButton
                                android:id="@+id/kong"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:text="@string/Kong" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/aliran"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="12"
                                android:text="@string/AK" />

                        </TableRow>

                    </TableLayout>

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/input_NoTelp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTelp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editPass2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <Button
                            android:id="@+id/kembali_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginHorizontal="5dp"
                            android:background="@drawable/border_btn"
                            android:text="KEMBALI" />

                        <Button
                            android:id="@+id/daftar_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginHorizontal="5dp"
                            android:background="@drawable/border_btn"
                            android:text="DAFTAR" />

                    </TableRow>
                </TableLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>